--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <img src="assets\arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/">Instagram
                                 <img src="assets\arrow.png"></a></li>
-                        <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item"><a href="">Currículum <img src="assets\arrow.png"></a></li>
                     </ul>
                 </div>
             </div>
