envio del formulario

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                         participando del proyecto Oracle ONE en Alura Latam.</h5>
                     <ul class="title__network">
                         <!-- Pon los enlaces de tus redes sociales favoritas -->
-                        <li class="title__network__item"><a href="https://github.com/ankhcaesar">Github <img src="assets\arrow.png"> </a></li>
+                        <li class="title__network__item"><a href="https://github.com/ankhcaesar">Github <img
+                                    src="assets\arrow.png"> </a></li>
                         <li class="title__network__item"><a href="https://www.linkedin.com/in/juliocesaroniv/">Linkedin
                                 <img src="assets\arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/">Instagram
@@ -73,7 +74,7 @@
 
         <!-- Sección de Skills -->
         <section class="skills" id="skills">
-            <h2 class="skills__title">habilidades </h2>
+            <h2 class="skills__title">Habilidades </h2>
             <div class="skills__line">
                 <div class="skills__box">
                     <ul>
@@ -125,15 +126,8 @@
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
-                        <li class="hobbies__name"> Patinaje</li>
-                    </ul>
-                </div>
-
-                <div class="hobbies__box">
-                    <ul>
                         <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
-                        <li class="hobbies__name">Tocar bajo</li>
+                        <li class="hobbies__name">Tocar guitarra</li>
                     </ul>
                 </div>
 
@@ -210,9 +204,10 @@
                         <p class="experience__text">Challenge Alura Codificador </p>
                         <div class="experience__description">
                             <span class="experience__repo"><a
-                                    href="https://github.com/ankhcaesar/oracleone_encriptador"><button
+                                    href="https://github.com/ankhcaesar/oracleone_encriptador" target="_blank"><button
                                         class="experience__boton__repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://oracleone-encriptador.vercel.app"><button class="experience__boton__demo">Ver
+                            <span class="experience__demo"><a href="https://oracleone-encriptador.vercel.app" target="_blank"><button
+                                        class="experience__boton__demo">Ver
                                         demo</button></a></span>
                         </div>
                     </div>
@@ -222,12 +217,13 @@
                     <img class="experience__img" src="./assets/proynumerosecreto.png">
                     <div class="experience__info">
                         <h4 class="experience__title">Juego creado con HTML y JavaScript</h4>
-                        <p class="experience__text">Challenge Oracle    </p>
+                        <p class="experience__text">Challenge Oracle </p>
                         <div class="experience__description">
                             <span class="experience__repo"><a
-                                    href="https://github.com/ankhcaesar/oracleone_numerosecreto"><button
+                                    href="https://github.com/ankhcaesar/oracleone_numerosecreto" target="_blank"><button
                                         class="experience__boton__repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://oracleone-numerosecreto.vercel.app"><button class="experience__boton__demo">Ver
+                            <span class="experience__demo"><a href="https://oracleone-numerosecreto.vercel.app" target="_blank"><button
+                                        class="experience__boton__demo">Ver
                                         demo</button></a></span>
                         </div>
                     </div>
@@ -240,9 +236,10 @@
                         <p class="experience__text">Challenge Oracle </p>
                         <div class="experience__description">
                             <span class="experience__repo"><a
-                                    href="https://github.com/ankhcaesar/oracleone_barberia"><button
+                                    href="https://github.com/ankhcaesar/oracleone_barberia" target="_blank"><button
                                         class="experience__boton__repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://oracleone-barberia.vercel.app"><button class="experience__boton__demo">Ver
+                            <span class="experience__demo"><a href="https://oracleone-barberia.vercel.app" target="_blank"><button
+                                        class="experience__boton__demo">Ver
                                         demo</button></a></span>
                         </div>
                     </div>
@@ -262,10 +259,10 @@
                 <div class="formcontacto__text">
                     <h2 class="formcontacto__title">Contacto</h2>
                     <p class="formcontacto__subtext">¿Quieres contactarme?</p>
-                    <p class="formcontacto__subtext">Complete el siguiente formulario y me pondré en contacto con
-                        usted lo antes posible. </p>
+                    <p class="formcontacto__subtext">Completa el siguiente formulario y me pondré en contacto con
+                        lo antes posible. </p>
 
-                    <form class="formcontacto__form" name="form" data-form>
+                    <form class="formcontacto__form" name="form" data-form action="https://formspree.io/f/xeqydzzl" method="post">
                         <input class="formcontacto__input" id="nombre" type="text" name="nombre" placeholder="Nombre"
                             maxlength="50" required>
                         <span class="nombre__mensajeError error"></span>
