--- a/index.html
+++ b/index.html
@@ -61,19 +61,14 @@
         <section class="about" id="sobre-mi">
             <div class="about__container">
                 <h2 class="about__title">Sobre mi</h2>
-                <p class="about__paragraph">A mis 45 años vivi en 2 paises, 5 ciudades. Cocinero, vendedor, chofer,
-                    electricista, cajero, encargado, soporte tecnico y muchas tareas mas. Descubri que el diseño
-                    me llama, que el codigo me atrae. De muy chico abrace la tecnologia y hoy despues de tanto caminar
-                    decidi hacer aquello que me enamoro de muy niño... desarollar paginas, aplicaciones, estar con la
-                    tecnologia en el dia a dia, pensar soluciones para mejorar el entorno.</p>
-                <p class="about__paragraph">Solo queda seguir adelante en este nuevo-viejo camino de realizar mis sueños
-                    y acompañar a otros a realizarlos tambien.</p>
+                <p class="about__paragraph">A mis 45 años viví en 2 países, 5 ciudades. Cocinero, vendedor, chofer, electricista, cajero, encargado, soporte técnico informático y muchas tareas más. Descubrí que el diseño me llama, que el código me atrae. De muy chico abrace la tecnología y hoy después de tanto caminar decidí hacer aquello que me enamoró de muy niño... desarrollar paginas, aplicaciones, estar con la tecnología en el dia a dia, pensar soluciones para mejorar el entorno.</p>
+                <p class="about__paragraph">Solo queda seguir adelante en este nuevo-viejo camino de realizar mis sueños y acompañar a otros a realizarlos también.</p>
                 <img class="about__signature" src="assets/firma_negro.png">
             </div>
         </section>
 
         <!-- Sección de Skills -->
-        <section class="skills" id="skills">
+        <section class="skills" id="skills">    
             <h2 class="skills__title">Habilidades </h2>
             <div class="skills__line">
                 <div class="skills__box">
