--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <!-- Sección de Hobbies -->
         <section class="hobbies" id="hobbies">
-            <h2 class="hobbies__title">Hobbies</h2>
+            <h2 class="hobbies__title">Aficiones</h2>
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul>
@@ -189,7 +189,7 @@
 
         <!-- Sección de Experiencia Profesional/Proyectos-->
         <section class="experience" id="xp">
-            <h2 class="experience__section__title">Experiencia Profesional</h2>
+            <h2 class="experience__section__title">Experiencia profesional</h2>
 
             <div class="experience__content">
                 <div class="experience__box">
