link abre en otra pestaña

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <nav>
                 <ul class="menu__list">
                     <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
-                    <li class="menu__list__item"><a href="#skills">Skills</a></li>
-                    <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
+                    <li class="menu__list__item"><a href="#skills">Habilidades</a></li>
+                    <li class="menu__list__item"><a href="#hobbies">Aficiones</a></li>
                     <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                     <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
                     <li class="menu__list__item"><a href="#contacto">juliocesaroniv@gmail.com</a></li>
@@ -45,13 +45,15 @@
                         participando del proyecto Oracle ONE en Alura Latam.</h5>
                     <ul class="title__network">
                         <!-- Pon los enlaces de tus redes sociales favoritas -->
-                        <li class="title__network__item"><a href="https://github.com/ankhcaesar">Github <img
+                        <li class="title__network__item"><a href="https://github.com/ankhcaesar" target="_blank">Github <img
                                     src="assets\arrow.png"> </a></li>
-                        <li class="title__network__item"><a href="https://www.linkedin.com/in/juliocesaroniv/">Linkedin
+                        <li class="title__network__item"><a href="https://www.linkedin.com/in/juliocesaroniv/" target="_blank">Linkedin
                                 <img src="assets\arrow.png"></a></li>
-                        <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/">Instagram
-                                <img src="assets\arrow.png"></a></li>
-                        <li class="title__network__item"><a href="">Currículum <img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/" target="_blank">Instagram
+                            <img src="assets\arrow.png"></a></li>
+                            <!--
+                         <li class="title__network__item"><a href="" target="_blank">Currículum <img src="assets\arrow.png"></a></li>
+                         -->
                     </ul>
                 </div>
             </div>
