cambios en habilidades y otros

--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
                         participando del proyecto Oracle ONE en Alura Latam.</h5>
                     <ul class="title__network">
                         <!-- Pon los enlaces de tus redes sociales favoritas -->
-                        <li class="title__network__item"><a href="https://github.com/ankhcaesar" target="_blank">Github <img
-                                    src="assets\arrow.png"> </a></li>
-                        <li class="title__network__item"><a href="https://www.linkedin.com/in/juliocesaroniv/" target="_blank">Linkedin
+                        <li class="title__network__item"><a href="https://github.com/ankhcaesar" target="_blank">Github
+                                <img src="assets\arrow.png"> </a></li>
+                        <li class="title__network__item"><a href="https://www.linkedin.com/in/juliocesaroniv/"
+                                target="_blank">Linkedin
                                 <img src="assets\arrow.png"></a></li>
-                        <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/" target="_blank">Instagram
-                            <img src="assets\arrow.png"></a></li>
-                            <!--
-                         <li class="title__network__item"><a href="" target="_blank">Currículum <img src="assets\arrow.png"></a></li>
-                         -->
+                        <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/"
+                                target="_blank">Instagram
+                                <img src="assets\arrow.png"></a></li>
+                        <!--
+                        <li class="title__network__item"><a href="" target="_blank">Currículum <img src="assets\arrow.png"></a></li>
+                        -->
                     </ul>
                 </div>
             </div>
@@ -63,14 +65,19 @@
         <section class="about" id="sobre-mi">
             <div class="about__container">
                 <h2 class="about__title">Sobre mi</h2>
-                <p class="about__paragraph">A mis 45 años viví en 2 países, 5 ciudades. Cocinero, vendedor, chofer, electricista, cajero, encargado, soporte técnico informático y muchas tareas más. Descubrí que el diseño me llama, que el código me atrae. De muy chico abrace la tecnología y hoy después de tanto caminar decidí hacer aquello que me enamoró de muy niño... desarrollar paginas, aplicaciones, estar con la tecnología en el dia a dia, pensar soluciones para mejorar el entorno.</p>
-                <p class="about__paragraph">Solo queda seguir adelante en este nuevo-viejo camino de realizar mis sueños y acompañar a otros a realizarlos también.</p>
+                <p class="about__paragraph">A mis 45 años viví en 2 países, 5 ciudades. Cocinero, vendedor, chofer,
+                    electricista, cajero, encargado, soporte técnico informático y muchas tareas más. Descubrí que el
+                    diseño me llama, que el código me atrae. De muy chico abrace la tecnología y hoy después de tanto
+                    caminar decidí hacer aquello que me enamoró de muy niño... desarrollar paginas, aplicaciones, estar
+                    con la tecnología en el dia a dia, pensar soluciones para mejorar el entorno.</p>
+                <p class="about__paragraph">Solo queda seguir adelante en este nuevo-viejo camino de realizar mis sueños
+                    y acompañar a otros a realizarlos también.</p>
                 <img class="about__signature" src="assets/firma_negro.png">
             </div>
         </section>
 
         <!-- Sección de Skills -->
-        <section class="skills" id="skills">    
+        <section class="skills" id="skills">
             <h2 class="skills__title">Habilidades </h2>
             <div class="skills__line">
                 <div class="skills__box">
@@ -84,13 +91,6 @@
                     <ul>
                         <li class="skills__img"> <img src="assets\js_icon.png" alt=""></li>
                         <li class="skills__name">Javascript</li>
-                    </ul>
-                </div>
-
-                <div class="skills__box">
-                    <ul>
-                        <li class="skills__img"> <img src="assets\php_icon.png" alt=""></li>
-                        <li class="skills__name">PHP</li>
                     </ul>
                 </div>
 
@@ -191,7 +191,7 @@
 
         <!-- Sección de Experiencia Profesional/Proyectos-->
         <section class="experience" id="xp">
-            <h2 class="experience__section__title">Experiencia profesional</h2>
+            <h2 class="experience__section__title">Experiencia</h2>
 
             <div class="experience__content">
                 <div class="experience__box">
@@ -200,11 +200,11 @@
                         <h4 class="experience__title">Encriptador de texto</h4>
                         <p class="experience__text">Challenge Alura Codificador </p>
                         <div class="experience__description">
-                            <span class="experience__repo"><a
-                                    href="https://github.com/ankhcaesar/oracleone_encriptador" target="_blank"><button
+                            <span class="experience__repo"><a href="https://github.com/ankhcaesar/oracleone_encriptador"
+                                    target="_blank"><button
                                         class="experience__boton__repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://oracleone-encriptador.vercel.app" target="_blank"><button
-                                        class="experience__boton__demo">Ver
+                            <span class="experience__demo"><a href="https://oracleone-encriptador.vercel.app"
+                                    target="_blank"><button class="experience__boton__demo">Ver
                                         demo</button></a></span>
                         </div>
                     </div>
@@ -219,8 +219,8 @@
                             <span class="experience__repo"><a
                                     href="https://github.com/ankhcaesar/oracleone_numerosecreto" target="_blank"><button
                                         class="experience__boton__repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://oracleone-numerosecreto.vercel.app" target="_blank"><button
-                                        class="experience__boton__demo">Ver
+                            <span class="experience__demo"><a href="https://oracleone-numerosecreto.vercel.app"
+                                    target="_blank"><button class="experience__boton__demo">Ver
                                         demo</button></a></span>
                         </div>
                     </div>
@@ -232,11 +232,11 @@
                         <h4 class="experience__title">Pagina creada con HTML y es responsive</h4>
                         <p class="experience__text">Challenge Oracle </p>
                         <div class="experience__description">
-                            <span class="experience__repo"><a
-                                    href="https://github.com/ankhcaesar/oracleone_barberia" target="_blank"><button
+                            <span class="experience__repo"><a href="https://github.com/ankhcaesar/oracleone_barberia"
+                                    target="_blank"><button
                                         class="experience__boton__repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href="https://oracleone-barberia.vercel.app" target="_blank"><button
-                                        class="experience__boton__demo">Ver
+                            <span class="experience__demo"><a href="https://oracleone-barberia.vercel.app"
+                                    target="_blank"><button class="experience__boton__demo">Ver
                                         demo</button></a></span>
                         </div>
                     </div>
@@ -259,7 +259,8 @@
                     <p class="formcontacto__subtext">Completa el siguiente formulario y me pondré en contacto con
                         lo antes posible. </p>
 
-                    <form class="formcontacto__form" name="form" data-form action="https://formspree.io/f/xeqydzzl" method="post">
+                    <form class="formcontacto__form" name="form" data-form action="https://formspree.io/f/xeqydzzl"
+                        method="post">
                         <input class="formcontacto__input" id="nombre" type="text" name="nombre" placeholder="Nombre"
                             maxlength="50" required>
                         <span class="nombre__mensajeError error"></span>
