--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     <li class="title__network__item"><a href="https://www.instagram.com/juliocesaroniv/"
                             target="_blank">Instagram
                             <img src="assets\arrow.png"></a></li>
+                            <li class="title__network__item"><a href="assets/cv.pdf"
+                                target="_blank">Currículum
+                                <img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
             <div class="right">
